[build-dependencies]
cfg_aliases = "0.2.1"

[dependencies]
glutin = { version = "0.32.2", default-features = false }
raw-window-handle = "0.6.2"
winit = { package = "tao", version = "0.19.1", default-features = false }

[features]
default = [ "egl", "x11", "wayland", "wgl" ]
egl = [ "glutin/egl" ]
wayland = [ "glutin/wayland" ]
wgl = [ "glutin/wgl" ]
x11 = [ "glutin/x11" ]

[lib]
path = "Source/lib.rs"

[package]
authors = [ "Kirill Chibisov <contact@kchibisov.com>" ]
description = "Glutin bootstrapping helpers with tao"
edition = "2024"
keywords = [ "windowing", "opengl", "tao" ]
license-file = "LICENSE"
name = "glutin_tao"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
version = "0.33.0"
