[build-dependencies]
cfg_aliases = { version = "0.2.1" }
gl_generator = { version = "0.14" }

[dependencies]
glutin = { version = "0.32.2", default-features = false }
glutin_tao = { path = "../glutin", default-features = false }
png = { version = "0.17.16", optional = true }
raw-window-handle = "0.6.2"
winit = { package = "tao", version = "0.19.1", default-features = false }

[[example]]
name = "egl_device"
required-features = ["egl"]

[features]
default = ["egl", "x11", "wayland", "wgl"]
egl = ["glutin_tao/egl", "png"]
wayland = ["glutin_tao/wayland"]
wgl = ["glutin_tao/wgl"]
x11 = ["glutin_tao/x11"]

[lib]
path = "Source/lib.rs"

[package]
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Examples for glutin"
edition = "2024"
license-file = "LICENSE"
name = "glutin_examples"
publish = false
readme = "../README.md"
repository = "https://github.com/rust-windowing/glutin"
rust-version = "1.85.0"
version = "0.1.3"
